--- a/token-spray/asana.yaml
+++ b/token-spray/asana.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developers.asana.com/docs/using-terminal
   severity: info
-  tags: api,asana
+  tags: token-spray,asana
 
 requests:
   - method: GET
