--- a/token-spray/bingmaps.yaml
+++ b/token-spray/bingmaps.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.microsoft.com/en-us/bingmaps/rest-services/locations/find-a-location-by-address
   severity: info
-  tags: api,bing,maps,bingmaps
+  tags: token-spray,bing,maps,bingmaps
 
 requests:
   - method: GET
