--- a/token-spray/bitly.yaml
+++ b/token-spray/bitly.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://dev.bitly.com/api-reference
   severity: info
-  tags: api,bitly
+  tags: token-spray,bitly
 
 requests:
   - method: GET
