--- a/token-spray/buildkite.yaml
+++ b/token-spray/buildkite.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://buildkite.com/docs/apis/rest-api/user
   severity: info
-  tags: api,buildkite
+  tags: token-spray,buildkite
 
 requests:
   - method: GET
