--- a/token-spray/buttercms.yaml
+++ b/token-spray/buttercms.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://buttercms.com/docs/api/#introduction
   severity: info
-  tags: api,buttercms
+  tags: token-spray,buttercms
 
 requests:
   - method: GET
