--- a/token-spray/calendly.yaml
+++ b/token-spray/calendly.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://calendly.stoplight.io/docs/api-docs-v1/b3A6MTg3MDczNg-about-me
   severity: info
-  tags: api,calendly
+  tags: token-spray,calendly
 
 requests:
   - method: GET
