--- a/token-spray/circleci.yaml
+++ b/token-spray/circleci.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://circleci.com/docs/api/v1
   severity: info
-  tags: api,circle,circleci
+  tags: token-spray,circle,circleci
 
 requests:
   - method: GET
