--- a/token-spray/deviantart.yaml
+++ b/token-spray/deviantart.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://www.deviantart.com/developers/authentication
   severity: info
-  tags: api,deviantart
+  tags: token-spray,deviantart
 
 requests:
   - method: POST
