--- a/token-spray/dropbox.yaml
+++ b/token-spray/dropbox.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://www.dropbox.com/developers/documentation/http/documentation
   severity: info
-  tags: api,dropbox
+  tags: token-spray,dropbox
 
 requests:
   - method: POST
