--- a/token-spray/github.yaml
+++ b/token-spray/github.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.github.com/en/rest/reference/users
   severity: info
-  tags: api,github
+  tags: token-spray,github
 
 requests:
   - method: GET
