--- a/token-spray/google-autocomplete.yaml
+++ b/token-spray/google-autocomplete.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Autocomplete API Test
   author: zzeitlin
   severity: info
-  tags: api,google,autocomplete
+  tags: token-spray,google,autocomplete
 
 requests:
   - method: GET
