--- a/token-spray/google-customsearch.yaml
+++ b/token-spray/google-customsearch.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Custom Search API Test
   author: zzeitlin
   severity: info
-  tags: api,google,search
+  tags: token-spray,google,search
 
 requests:
   - method: GET
