--- a/token-spray/google-directions.yaml
+++ b/token-spray/google-directions.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Directions API Test
   author: zzeitlin
   severity: info
-  tags: api,google,directions
+  tags: token-spray,google,directions
 
 requests:
   - method: GET
