--- a/token-spray/google-fcm.yaml
+++ b/token-spray/google-fcm.yaml
@@ -4,7 +4,7 @@ info:
   name: Google FCM API Test
   author: zzeitlin
   severity: info
-  tags: api,google,fcm,firebase,cloud,messaging
+  tags: token-spray,google,fcm,firebase,cloud,messaging
 
 requests:
   - method: POST
