--- a/token-spray/google-findplacefromtext.yaml
+++ b/token-spray/google-findplacefromtext.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Find Place From Text API Test
   author: zzeitlin
   severity: info
-  tags: api,google,find,text
+  tags: token-spray,google,find,text
 
 requests:
   - method: GET
