--- a/token-spray/google-gedistancematrix.yaml
+++ b/token-spray/google-gedistancematrix.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Distance Matrix API Test
   author: zzeitlin
   severity: info
-  tags: api,google,distance,matrix
+  tags: token-spray,google,distance,matrix
 
 requests:
   - method: GET
