--- a/token-spray/google-geocode.yaml
+++ b/token-spray/google-geocode.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Geocode API Test
   author: zzeitlin
   severity: info
-  tags: api,google,geocode
+  tags: token-spray,google,geocode
 
 requests:
   - method: GET
