--- a/token-spray/google-geolocation.yaml
+++ b/token-spray/google-geolocation.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Geolocation API Test
   author: zzeitlin
   severity: info
-  tags: api,google,geolocation
+  tags: token-spray,google,geolocation
 
 requests:
   - method: GET
