--- a/token-spray/google-mapsembedadvanced.yaml
+++ b/token-spray/google-mapsembedadvanced.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Maps Embed (Advanced) API Test
   author: zzeitlin
   severity: info
-  tags: api,google,maps,embed
+  tags: token-spray,google,maps,embed
 
 requests:
   - method: GET
