--- a/token-spray/google-nearbysearch.yaml
+++ b/token-spray/google-nearbysearch.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Nearby Search API Test
   author: zzeitlin
   severity: info
-  tags: api,google,search,nearby
+  tags: token-spray,google,search,nearby
 
 requests:
   - method: GET
