--- a/token-spray/google-nearestroads.yaml
+++ b/token-spray/google-nearestroads.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Nearest Roads API Test
   author: zzeitlin
   severity: info
-  tags: api,google,roads
+  tags: token-spray,google,roads
 
 requests:
   - method: GET
