--- a/token-spray/google-placedetails.yaml
+++ b/token-spray/google-placedetails.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Place Details API Test
   author: zzeitlin
   severity: info
-  tags: api,google,place,details
+  tags: token-spray,google,place,details
 
 requests:
   - method: GET
