--- a/token-spray/google-placesphoto.yaml
+++ b/token-spray/google-placesphoto.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Places Photo API Test
   author: zzeitlin
   severity: info
-  tags: api,google,places,photo
+  tags: token-spray,google,places,photo
 
 requests:
   - method: GET
