--- a/token-spray/google-playablelocations.yaml
+++ b/token-spray/google-playablelocations.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Playable Locations API Test
   author: zzeitlin
   severity: info
-  tags: api,google,playable,locations
+  tags: token-spray,google,playable,locations
 
 requests:
   - method: GET
