--- a/token-spray/google-routetotraveled.yaml
+++ b/token-spray/google-routetotraveled.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Route to Traveled API Test
   author: zzeitlin
   severity: info
-  tags: api,google,route
+  tags: token-spray,google,route
 
 requests:
   - method: GET
