--- a/token-spray/google-speedlimit.yaml
+++ b/token-spray/google-speedlimit.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Speed Limit API Test
   author: zzeitlin
   severity: info
-  tags: api,google,speed,limit
+  tags: token-spray,google,speed,limit
 
 requests:
   - method: GET
