--- a/token-spray/google-timezone.yaml
+++ b/token-spray/google-timezone.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Timezone API Test
   author: zzeitlin
   severity: info
-  tags: api,google,timezone
+  tags: token-spray,google,timezone
 
 requests:
   - method: GET
