--- a/token-spray/googlet-extsearchplaces.yaml
+++ b/token-spray/googlet-extsearchplaces.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Places Text Search API Test
   author: zzeitlin
   severity: info
-  tags: api,google,search,places,text
+  tags: token-spray,google,search,places,text
 
 requests:
   - method: GET
