--- a/token-spray/heroku.yaml
+++ b/token-spray/heroku.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://devcenter.heroku.com/articles/platform-api-quickstart#calling-the-api
   severity: info
-  tags: api,heroku
+  tags: token-spray,heroku
 
 requests:
   - method: POST
