--- a/token-spray/instagram.yaml
+++ b/token-spray/instagram.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developers.facebook.com/docs/instagram-api/getting-started
   severity: info
-  tags: api,instagram,graph
+  tags: token-spray,instagram,graph
 
 requests:
   - method: GET
