--- a/token-spray/ipstack.yaml
+++ b/token-spray/ipstack.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://ipstack.com/documentation
   severity: info
-  tags: api,ipstack
+  tags: token-spray,ipstack
 
 requests:
   - method: GET
