--- a/token-spray/iterable.yaml
+++ b/token-spray/iterable.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://api.iterable.com/api/docs
   severity: info
-  tags: api,iterable
+  tags: token-spray,iterable
 
 requests:
   - method: GET
