--- a/token-spray/jumpcloud.yaml
+++ b/token-spray/jumpcloud.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.jumpcloud.com/1.0/authentication-and-authorization/api-key
   severity: info
-  tags: api,jumpcloud
+  tags: token-spray,jumpcloud
 
 requests:
   - method: GET
