--- a/token-spray/lokalise.yaml
+++ b/token-spray/lokalise.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://app.lokalise.com/api2docs/curl/#resource-projects
   severity: info
-  tags: api,lokalise
+  tags: token-spray,lokalise
 
 requests:
   - method: GET
