--- a/token-spray/loqate.yaml
+++ b/token-spray/loqate.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://www.loqate.com/resources/support/apis/Capture/Interactive/Find/1.1/
   severity: info
-  tags: api,loqate
+  tags: token-spray,loqate
 
 requests:
   - method: GET
