--- a/token-spray/mailchimp.yaml
+++ b/token-spray/mailchimp.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://mailchimp.com/developer/transactional/docs/smtp-integration/#credentials-and-configuration
   severity: info
-  tags: api,mailchimp
+  tags: token-spray,mailchimp
 
 network:
   - inputs:
