--- a/token-spray/mailgun.yaml
+++ b/token-spray/mailgun.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://documentation.mailgun.com/en/latest/api-intro.html
   severity: info
-  tags: api,mailgun
+  tags: token-spray,mailgun
 
 requests:
   - method: GET
