--- a/token-spray/mapbox.yaml
+++ b/token-spray/mapbox.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.mapbox.com/api/search/geocoding/
   severity: info
-  tags: api,mapbox
+  tags: token-spray,mapbox
 
 requests:
   - method: GET
