--- a/token-spray/nerdgraph.yaml
+++ b/token-spray/nerdgraph.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.newrelic.com/docs/apis/nerdgraph/get-started/introduction-new-relic-nerdgraph/
   severity: info
-  tags: api,newrelic,nerdgraph
+  tags: token-spray,newrelic,nerdgraph
 
 requests:
   - method: POST
