--- a/token-spray/npm.yaml
+++ b/token-spray/npm.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.npmjs.com/creating-and-viewing-access-tokens
   severity: info
-  tags: api,node,npm,package,manager
+  tags: token-spray,node,npm,package,manager
 
 requests:
   - method: GET
