--- a/token-spray/openweather.yaml
+++ b/token-spray/openweather.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://openweathermap.org/current
   severity: info
-  tags: api,weather,openweather
+  tags: token-spray,weather,openweather
 
 requests:
   - method: GET
