--- a/token-spray/pagerduty.yaml
+++ b/token-spray/pagerduty.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developer.pagerduty.com/api-reference
   severity: info
-  tags: api,pagerduty
+  tags: token-spray,pagerduty
 
 requests:
   - method: GET
