--- a/token-spray/pendo.yaml
+++ b/token-spray/pendo.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://help.pendo.io/resources/support-library/api/index.html
   severity: info
-  tags: api,pendo
+  tags: token-spray,pendo
 
 requests:
   - method: GET
