--- a/token-spray/pivotaltracker.yaml
+++ b/token-spray/pivotaltracker.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://www.pivotaltracker.com/help/api
   severity: info
-  tags: api,pivotaltracker
+  tags: token-spray,pivotaltracker
 
 requests:
   - method: GET
