--- a/token-spray/postmark.yaml
+++ b/token-spray/postmark.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://postmarkapp.com/developer/api/overview
   severity: info
-  tags: api,postmark
+  tags: token-spray,postmark
 
 requests:
   - method: GET
