--- a/token-spray/sendgrid.yaml
+++ b/token-spray/sendgrid.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://docs.sendgrid.com/for-developers/sending-email/getting-started-smtp
   severity: info
-  tags: api,sendgrid
+  tags: token-spray,sendgrid
 
 network:
   - inputs:
