--- a/token-spray/slack.yaml
+++ b/token-spray/slack.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://api.slack.com/methods/auth.test
   severity: info
-  tags: api,slack
+  tags: token-spray,slack
 
 requests:
   - method: POST
