--- a/token-spray/sonarcloud.yaml
+++ b/token-spray/sonarcloud.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://sonarcloud.io/web_api/api/authentication
   severity: info
-  tags: api,sonarcloud
+  tags: token-spray,sonarcloud
 
 requests:
   - method: GET
