--- a/token-spray/spotify.yaml
+++ b/token-spray/spotify.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developer.spotify.com/documentation/general/guides/authorization-guide/
   severity: info
-  tags: api,spotify
+  tags: token-spray,spotify
 
 requests:
   - method: GET
