--- a/token-spray/square.yaml
+++ b/token-spray/square.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developer.squareup.com/explorer/square/locations-api/list-locations
   severity: info
-  tags: api,square
+  tags: token-spray,square
 
 requests:
   - method: GET
