--- a/token-spray/stripe.yaml
+++ b/token-spray/stripe.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://stripe.com/docs/api/authentication
   severity: info
-  tags: api,stripe
+  tags: token-spray,stripe
 
 requests:
   - method: GET
