--- a/token-spray/tinypng.yaml
+++ b/token-spray/tinypng.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://tinypng.com/developers
   severity: info
-  tags: api,tinypng
+  tags: token-spray,tinypng
 
 requests:
   - method: POST
