--- a/token-spray/travisci.yaml
+++ b/token-spray/travisci.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developer.travis-ci.com/
   severity: info
-  tags: api,travis
+  tags: token-spray,travis
 
 requests:
   - method: GET
