--- a/token-spray/twitter.yaml
+++ b/token-spray/twitter.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developer.twitter.com/en/docs/twitter-api/api-reference-index
   severity: info
-  tags: api,twitter
+  tags: token-spray,twitter
 
 requests:
   - method: GET
