--- a/token-spray/visualstudio.yaml
+++ b/token-spray/visualstudio.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://openapi.appcenter.ms/
   severity: info
-  tags: api,visualstudio,microsoft
+  tags: token-spray,visualstudio,microsoft
 
 requests:
   - method: GET
