--- a/token-spray/weglot.yaml
+++ b/token-spray/weglot.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developers.weglot.com/api/reference
   severity: info
-  tags: api,weglot
+  tags: token-spray,weglot
 
 requests:
   - method: POST
