--- a/token-spray/youtube.yaml
+++ b/token-spray/youtube.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://developers.google.com/youtube/v3/docs
   severity: info
-  tags: api,youtube
+  tags: token-spray,youtube
 
 requests:
   - method: GET
