--- a/token-spray/google-elevation.yaml
+++ b/token-spray/google-elevation.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Elevation API Test
   author: zzeitlin
   severity: info
-  tags: api,google,elevation
+  tags: token-spray,google,elevation
 
 requests:
   - method: GET
