--- a/token-spray/google-staticmaps.yaml
+++ b/token-spray/google-staticmaps.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Static Maps API Test
   author: zzeitlin
   severity: info
-  tags: api,google,maps
+  tags: token-spray,google,maps
 
 requests:
   - method: GET
