--- a/token-spray/google-streetview.yaml
+++ b/token-spray/google-streetview.yaml
@@ -4,7 +4,7 @@ info:
   name: Google Static Streetview API Test
   author: zzeitlin
   severity: info
-  tags: api,google,streetview
+  tags: token-spray,google,streetview
 
 requests:
   - method: GET
