--- a/token-spray/hubspot.yaml
+++ b/token-spray/hubspot.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://legacydocs.hubspot.com/docs/methods/owners/get_owners
   severity: info
-  tags: api,hubspot
+  tags: token-spray,hubspot
 
 requests:
   - method: GET
