--- a/token-spray/wakatime.yaml
+++ b/token-spray/wakatime.yaml
@@ -5,7 +5,7 @@ info:
   author: zzeitlin
   reference: https://wakatime.com/developers
   severity: info
-  tags: api,wakatime
+  tags: token-spray,wakatime
 
 requests:
   - method: GET
