--- a/default-logins/hp/hp-switch-default-login.yaml
+++ b/default-logins/hp/hp-switch-default-login.yaml
@@ -1,4 +1,4 @@
-id: hp-1820-8G-switch-default-dredential
+id: hp-switch-default-login
 info:
   name: HP 1820-8G Switch J9979A Default Credential
   author: pussycat0x
@@ -6,25 +6,24 @@ info:
   reference: https://support.hpe.com/hpesc/public/docDisplay?docId=a00077779en_us&docLocale=en_US
   metadata:
     fofa-dork: 'HP 1820-8G Switch J9979A'
-  tags: default, hp
+  tags: default-login,hp
+
 requests:
   - raw:
       - |
           POST /htdocs/login/login.lua HTTP/1.1
           Host: {{Hostname}}
-          Accept: application/json, text/javascript, */*; q=0.01
-          Accept-Language: en-US,en;q=0.5
-          Accept-Encoding: gzip, deflate
-          Content-Type: application/x-www-form-urlencoded
-          X-Requested-With: XMLHttpRequest
 
           username=admin&password=
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - '"redirect": "/htdocs/pages/main/main.lsp"'
+          - '"error": ""'
         condition: and
+
       - type: status
         status:
           - 200
