Update and rename remkon-device-manager-detect.yaml to remkon-manager-detect.yaml

--- a/technologies/remkon-manager-detect.yaml
+++ b/technologies/remkon-manager-detect.yaml
@@ -1,10 +1,10 @@
-id: remkon-device-manager-detect
+id: remkon-manager-detect
 
 info:
-  name: Remkon Device Manager Detected
+  name: Remkon Device Manager Detect
   author: pikpikcu
   severity: info
-  tags: remkon,tech
+  tags: remkon,tech,panel
 
 requests:
   - method: GET
@@ -21,4 +21,3 @@ requests:
         part: body
         words:
           - "<title>Remkon Device Manager</title>"
-          - "NASCENT Technology, LLC."
