--- a/vulnerabilities/wordpress/wordpress-accessible-wpconfig.yaml
+++ b/vulnerabilities/wordpress/wordpress-accessible-wpconfig.yaml
@@ -3,7 +3,7 @@ info:
   name: WordPress accessible wp-config
   author: Kiblyn11,zomsop82,madrobot,geeknik,daffainfo,r12w4n
   severity: high
-  tags: wordpress,backups
+  tags: wordpress,backup
 
 requests:
   - method: GET
@@ -34,9 +34,11 @@ requests:
     matchers:
       - type: word
         words:
-          - DB_NAME
-          - DB_PASSWORD
+          - "DB_NAME"
+          - "DB_PASSWORD"
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
