Update and rename aws-s3-access-key-leak.yaml to wpconfig-aws-keys.yaml

--- a/misconfiguration/wpconfig-aws-keys.yaml
+++ b/misconfiguration/wpconfig-aws-keys.yaml
@@ -1,10 +1,10 @@
-id: aws-s3-access-key-leak
+id: wpconfig-aws-keys
 
 info:
-  name: AWS S3 KEYS
-  author: Rizwan Syed @r12w4n
+  name: AWS S3 keys Leak
+  author: r12w4n
   severity: high
-  tags: aws,s3,bucket,tech
+  tags: aws,s3,wordpress,disclosure
 
 requests:
   - method: GET
@@ -18,4 +18,7 @@ requests:
         words:
           - 'access-key-id'
           - 'secret-access-key'
+          - 'DB_NAME'
+          - 'DB_PASSWORD'
+        condition: and
         part: body
