Update and rename wptouch-plugin-open-redirect.yaml to vulnerabilities/wordpress/wptouch-open-redirect.yaml

--- a/vulnerabilities/wordpress/wptouch-open-redirect.yaml
+++ b/vulnerabilities/wordpress/wptouch-open-redirect.yaml
@@ -1,11 +1,11 @@
-id: wptouch-plugin-open-redirect
+id: wptouch-open-redirect
 
 info:
   name: WPTouch Switch Desktop 3.x Open Redirection
   author: 0x_Akoko
-  reference: https://cxsecurity.com/issue/WLB-2020030114
   severity: medium
-  tags: wp,redirect,wordpress
+  reference: https://cxsecurity.com/issue/WLB-2020030114
+  tags: wp-plugin,redirect,wordpress
 
 requests:
   - method: GET
@@ -15,5 +15,5 @@ requests:
     matchers:
       - type: regex
         regex:
-          - '(?m)^(?:Location\s*?:\s*?)(?:https?://|//)?(?:[a-zA-Z0-9\-_\.@]*)example\.com.*$'
+          - '(?m)^(?:Location\s*?:\s*?)(?:https?://|//)(?:[a-zA-Z0-9\-_\.@]*)example\.com.*$'
         part: header
