--- a/exposures/configs/github-workflows-disclosure.yaml
+++ b/exposures/configs/github-workflows-disclosure.yaml
@@ -31,6 +31,11 @@ requests:
       - "{{BaseURL}}/.github/workflows/pr.yml"
       - "{{BaseURL}}/.github/workflows/automerge.yml"
       - "{{BaseURL}}/.github/workflows/docker.yml"
+      - "{{BaseURL}}/.github/workflows/ci-generated.yml"
+      - "{{BaseURL}}/.github/workflows/ci-push.yml"
+      - "{{BaseURL}}/.github/workflows/ci-daily.yml"
+      - "{{BaseURL}}/.github/workflows/ci-issues.yml"
+      - "{{BaseURL}}/.github/workflows/smoosh-status.yml"
 
     matchers-condition: and
     matchers:
