--- a/exposures/configs/github-workflows-disclosure.yaml
+++ b/exposures/configs/github-workflows-disclosure.yaml
@@ -2,7 +2,7 @@ id: github-workflows-disclosure
 
 info:
   name: Github Workflow Disclosure
-  author: dhiyaneshDk
+  author: dhiyaneshDk,geeknik
   severity: medium
   reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/github-workflows-disclosure.json
   tags: exposure,config
