--- a/vulnerabilities/other/pmb-directory-traversal.yaml
+++ b/vulnerabilities/other/pmb-directory-traversal.yaml
@@ -14,7 +14,8 @@ requests:
     path:
       - "{{BaseURL}}/opac_css/getgif.php?chemin=../../../../../../etc/passwd&nomgif=tarik"
       - "{{BaseURL}}/pmb/opac_css/getgif.php?chemin=../../../../../../etc/passwd&nomgif=tarik"
-
+      
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: regex
