--- a/technologies/prtg-detect.yaml
+++ b/technologies/prtg-detect.yaml
@@ -13,7 +13,8 @@ requests:
       - "{{BaseURL}}/index.htm"
       - "{{BaseURL}}/prtg/index.htm"
       - "{{BaseURL}}/PRTG/index.htm"
-
+      
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: status
