--- a/misconfiguration/skycaiji-install.yaml
+++ b/misconfiguration/skycaiji-install.yaml
@@ -4,7 +4,7 @@ info:
   name: SkyCaiji Exposed Installation
   author: pikpikcu
   severity: high
-  tags: tech,skycaiji,storage
+  tags: tech,skycaiji,exposure,misconfig
 
 requests:
   - method: GET
@@ -18,6 +18,7 @@ requests:
         words:
           - '<title>蓝天采集器 SkyCaiji 安装</title>'
           - 'https://www.skycaiji.com'
+          - '<a href="/index.php?s=/Install/Index/step1" class="btn btn-lg btn-success">'
         condition: and
 
       - type: status
