--- a/technologies/graphql-detect.yaml
+++ b/technologies/graphql-detect.yaml
@@ -4,7 +4,7 @@ info:
   name: GraphQL API Detection
   author: NkxxkN,ELSFA7110,@OFJAAAH
   severity: info
-  tags: tech,graphql
+  tags: tech,graphql,fuzz
 
 requests:
   - method: POST
