--- a/exposures/configs/zend-config-file.yaml
+++ b/exposures/configs/zend-config-file.yaml
@@ -22,7 +22,8 @@ requests:
       - "{{BaseURL}}/shop/application/configs/application.ini"
       - "{{BaseURL}}/site_cg/application/configs/application.ini"
       - "{{BaseURL}}/slr/application/configs/application.ini"
-
+      
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
