moving file around

--- a/vulnerabilities/wordpress/wp-oxygen-theme-lfi.yaml
+++ b/vulnerabilities/wordpress/wp-oxygen-theme-lfi.yaml
@@ -4,7 +4,7 @@ info:
   name: WordPress Oxygen-Theme Themes LFI
   author: 0x_Akoko
   severity: high
-  tags: wordpress,wp-theme,lfi,wp
+  tags: wordpress,wp-theme,lfi
   reference: https://cxsecurity.com/issue/WLB-2019030178
 
 requests:
