Modified most of the default_logins templates to output username and password fields consistently

--- a/default-logins/UCMDB/ucmdb-default-login.yaml
+++ b/default-logins/UCMDB/ucmdb-default-login.yaml
@@ -7,10 +7,20 @@ info:
   tags: ucmdb,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/ucmdb-ui/cms/loginRequest.do;"
-    body: "customerID=1&isEncoded=false&userName=diagnostics&password=YWRtaW4=&ldapServerName=UCMDB"
+  - raw:
+      - |
+        POST /ucmdb-ui/cms/loginRequest.do; HTTP/1.1
+        Host: {{BaseURL}}
+
+        customerID=1&isEncoded=false&userName=diagnostics&password={{base64(password)}}&ldapServerName=UCMDB
+
+    payloads:
+      username:
+        - diagnostics
+      password:
+        - admin
+    attack: pitchfork
+
     matchers-condition: and
     matchers:
       - type: status
