--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -17,25 +17,18 @@ requests:
         Accept: application/json, text/plain, */*
         Content-Type: application/json
 
-        {"userName":"admin","password":"cs141-snmp"}
+        "userName":{{username}},"password":{{password}}
 
-      - |
-        POST /api/login HTTP/1.1
-        Host: {{Hostname}}
-        Accept: application/json, text/plain, */*
-        Content-Type: application/json
-
-        {"userName":"engineer","password":"engineer"}
-
-      - |
-        POST /api/login HTTP/1.1
-        Host: {{Hostname}}
-        Accept: application/json, text/plain, */*
-        Content-Type: application/json
-
-        {"userName":"guest","password":"guest"}
-
-    stop-at-first-match: true
+    payloads:
+      username:
+        - admin
+        - engineer
+        - guest
+      password:
+        - cs141-snmp
+        - engineer
+        - guest
+    attack: pitchfork
     matchers-condition: and
     matchers:
       - type: word
