--- a/default-logins/apache/airflow-default-login.yaml
+++ b/default-logins/apache/airflow-default-login.yaml
@@ -21,8 +21,14 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Referer: {{BaseURL}}/admin/airflow/login
 
-        username=airflow&password=airflow&_csrf_token={{csrf_token}}
+        username={{username}}&password={{password}}&_csrf_token={{csrf_token}}
 
+    payloads:
+      username:
+        - airflow
+      password:
+        - airflow
+    attack: pitchfork
     extractors:
       - type: regex
         name: csrf_token
