--- a/default-logins/apache/superset-default-login.yaml
+++ b/default-logins/apache/superset-default-login.yaml
@@ -21,7 +21,14 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Referer: {{BaseURL}}/admin/airflow/login
 
-        csrf_token={{csrff_token}}&username=admin&password=admin
+        csrf_token={{csrff_token}}&username={{username}}&password={{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     extractors:
       - type: regex
