--- a/default-logins/arl/arl-default-login.yaml
+++ b/default-logins/arl/arl-default-login.yaml
@@ -7,13 +7,20 @@ info:
   tags: arl,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/api/user/login"
-    headers:
-      Content-Type: application/json; charset=UTF-8
-    body: |
-      {"username":"admin","password":"arlpass"}
+  - raw:
+      - |
+        POST /api/user/login HTTP/1.1
+        Host: {{BaseURL}}
+        Content-Type: application/json; charset=UTF-8
+
+        "username":{{username}},"password":{{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - arlpass
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
