--- a/default-logins/azkaban/azkaban-default-login.yaml
+++ b/default-logins/azkaban/azkaban-default-login.yaml
@@ -14,8 +14,14 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
 
-        action=login&username=admin&password=admin
+        action=login&username={{username}}&password={{password}}
 
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
     matchers-condition: and
     matchers:
       - type: word
