--- a/default-logins/chinaunicom/chinaunicom-default-login.yaml
+++ b/default-logins/chinaunicom/chinaunicom-default-login.yaml
@@ -7,10 +7,20 @@ info:
   tags: chinaunicom,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/cu.html"
-    body: "frashnum=&action=login&Frm_Logintoken=1&Username=CUAdmin&Password=CUAdmin&Username=&Password="
+  - raw:
+      - |
+        POST /cu.html HTTP/1.1
+        Host: {{BaseURL}}
+
+        "frashnum=&action=login&Frm_Logintoken=1&Username={{username}}&Password={{password}}&Username=&Password="
+
+    payloads:
+      username:
+        - CUAdmin
+      password:
+        - CUAdmin
+    attack: pitchfork
+
     matchers-condition: and
     matchers:
       - type: status
