--- a/default-logins/dell/emcecom-default-login.yaml
+++ b/default-logins/dell/emcecom-default-login.yaml
@@ -9,11 +9,18 @@ info:
   tags: dell,emc,ecom,default-login
 
 requests:
-  - method: GET
-    path:
-      - '{{BaseURL}}'
-    headers:
-      Authorization: Basic YWRtaW46IzFQYXNzd29yZA==
+  - raw:
+      - |
+        GET / HTTP/1.1
+        Host: {{BaseURL}}
+        Authorization: Basic {{base64(username + ':' + password)}}
+
+    payloads:
+      username:
+        - root
+      password:
+        - calvin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
