--- a/default-logins/druid/druid-default-login.yaml
+++ b/default-logins/druid/druid-default-login.yaml
@@ -7,12 +7,25 @@ info:
   tags: druid,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/druid/submitLogin"
-      - "{{BaseURL}}/submitLogin"
+  - raw:
+      - |
+        POST /druid/submitLogin HTTP/1.1
+        Host: {{BaseURL}}
 
-    body: "loginUsername=admin&loginPassword=admin"
+        loginUsername={{username}}&loginPassword={{password}}
+
+      - |
+        POST /submitLogin HTTP/1.1
+        Host: {{BaseURL}}
+
+        loginUsername={{username}}&loginPassword={{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
