--- a/default-logins/gitlab/gitlab-weak-login.yaml
+++ b/default-logins/gitlab/gitlab-weak-login.yaml
@@ -17,13 +17,13 @@ requests:
         Referer: {{BaseURL}}
         content-type: application/json
 
-        {"grant_type":"password","username":"§gitlab_user§","password":"§gitlab_password§"}
+        {"grant_type":"password","username":"{{username}}","password":"{{password}}"}
 
     payloads:
-      gitlab_password:
+      password:
         - 12345
         - 123456789
-      gitlab_user:
+      username:
         - 1234
         - admin
 
