--- a/default-logins/grafana/grafana-default-login.yaml
+++ b/default-logins/grafana/grafana-default-login.yaml
@@ -19,11 +19,13 @@ requests:
         Referer: {{BaseURL}}
         content-type: application/json
 
-        {"user":"admin","password":"§grafana_password§"}
+        {"user":"{{username}}","password":"{{password}}"}
 
 
     payloads:
-      grafana_password:
+      username:
+        - admin
+      password:
         - prom-operator
         - admin
 
