--- a/default-logins/hortonworks/smartsense-default-login.yaml
+++ b/default-logins/hortonworks/smartsense-default-login.yaml
@@ -9,11 +9,18 @@ info:
   tags: hortonworks,smartsense,default-login
 
 requests:
-  - method: GET
-    path:
-      - '{{BaseURL}}/apt/v1/context'
-    headers:
-      Authorization: Basic YWRtaW46YWRtaW4=
+  - raw:
+      - |
+        GET /apt/v1/context HTTP/1.1
+        Host: {{BaseURL}}
+        Authorization: Basic {{base64(username + ':' + password)}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
