--- a/default-logins/idemia/idemia-biometrics-default-login.yaml
+++ b/default-logins/idemia/idemia-biometrics-default-login.yaml
@@ -9,11 +9,17 @@ info:
   tags: idemia,biometrics,default-login
 
 requests:
-  - method: POST
-    path:
-      - '{{BaseURL}}/cgi-bin/login.cgi'
+  - raw:
+      - |
+        POST /cgi-bin/login.cgi HTTP/1.1
+        Host: {{BaseURL}}
 
-    body: password=12345
+        password={{password}}
+
+    payloads:
+      password:
+        - 12345
+    attack: sniper
 
     matchers-condition: and
     matchers:
