--- a/default-logins/jenkins/jenkins-default.yaml
+++ b/default-logins/jenkins/jenkins-default.yaml
@@ -18,7 +18,7 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Cookie: {{cookie}}
 
-        j_username=admin&j_password=admin&from=%2F&Submit=Sign+in
+        j_username={{username}}&j_password={{password}}&from=%2F&Submit=Sign+in
 
       - |
         POST /j_spring_security_check HTTP/1.1
@@ -26,12 +26,21 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Cookie: {{cookie}}
 
-        j_username=jenkins&j_password=password&from=%2F&Submit=Sign+in
+        j_username={{username}}&j_password={{password}}&from=%2F&Submit=Sign+in
 
       - |
         GET / HTTP/1.1
         Host: {{Hostname}}
         Cookie: {{cookie}}
+
+    payloads:
+      username:
+        - admin
+        - jenkins
+      password:
+        - admin
+        - password
+    attack: pitchfork
 
     extractors:
       - type: regex
