--- a/default-logins/minio/minio-default-login.yaml
+++ b/default-logins/minio/minio-default-login.yaml
@@ -7,23 +7,20 @@ info:
   tags: default-login,minio
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/minio/webrpc"
+  - raw:
+      - |
+        POST /minio/webrpc HTTP/1.1
+        Host: {{BaseURL}}
+        Content-Type: application/json
 
-    headers:
-      Content-Type: application/json
+        {"id":1,"jsonrpc":"2.0","params":{"username":"{{username}}","password":"{{password}}"},"method":"Web.Login"}
 
-    body: '{"id":1,"jsonrpc":"2.0","params":{"username":"minioadmin","password":"minioadmin"},"method":"Web.Login"}'
-
-  - method: POST
-    path:
-      - "{{BaseURL}}/minio/webrpc"
-
-    headers:
-      Content-Type: application/json
-
-    body: '{"id":1,"jsonrpc":"2.0","params":{"username":"minioadmin","password":"minioadmin"},"method":"web.Login"}'
+    payloads:
+      username:
+        - minioadmin
+      password:
+        - minioadmin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
