--- a/default-logins/nagios/nagios-default-login.yaml
+++ b/default-logins/nagios/nagios-default-login.yaml
@@ -6,16 +6,25 @@ info:
   tags: nagios,default-login
   reference: https://www.nagios.org
 requests:
-  - method: GET
-    path:
-      - "{{BaseURL}}/nagios/side.php"
-    headers:
-      Authorization: Basic bmFnaW9zYWRtaW46bmFnaW9zYWRtaW4=
+  - raw:
+      - |
+        GET /nagios/side.php HTTP/1.1
+        Host: {{BaseURL}}
+        Authorization: Basic {{base64(username + ':' + password)}}
+
+    payloads:
+      username:
+        - nagiosadmin
+        - root
+      password:
+        - nagiosadmin
+        - nagiosxi
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
       - type: status
-        status:
+        status:å
           - 200
       - type: word
         words:
