--- a/default-logins/nexus/nexus-default-login.yaml
+++ b/default-logins/nexus/nexus-default-login.yaml
@@ -14,7 +14,14 @@ requests:
         X-Nexus-UI: true
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
 
-        username=YWRtaW4%3D&password=YWRtaW4xMjM%3D
+        username={{base64(username)}}&password={{base64(password)}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin123
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
