--- a/default-logins/panabit/panabit-default-login.yaml
+++ b/default-logins/panabit/panabit-default-login.yaml
@@ -19,14 +19,21 @@ requests:
         Accept-Language: en-GB,en-US;q=0.9,en;q=0.8
 
         ------WebKitFormBoundaryAjZMsILtbrBp8VbC
-        Content-Disposition: form-data; name="username"
+        Content-Disposition: form-data; name="{{username}}"
 
         admin
         ------WebKitFormBoundaryAjZMsILtbrBp8VbC
-        Content-Disposition: form-data; name="password"
+        Content-Disposition: form-data; name="{{password}}"
 
         panabit
         ------WebKitFormBoundaryAjZMsILtbrBp8VbC--
+
+    payloads:
+      username:
+        - username
+      password:
+        - password
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
