--- a/default-logins/rabbitmq/rabbitmq-default-login.yaml
+++ b/default-logins/rabbitmq/rabbitmq-default-login.yaml
@@ -7,11 +7,20 @@ info:
   tags: rabbitmq,default-login
 
 requests:
-  - method: GET
-    path:
-      - "{{BaseURL}}/api/whoami"
-    headers:
-      Authorization: "Basic Z3Vlc3Q6Z3Vlc3Q="
+  - raw:
+      - |
+        GET /api/whoami HTTP/1.1
+        Host: {{BaseURL}}
+        Content-Type: application/x-www-form-urlencoded
+        Authorization: Basic {{base64(username + ':' + password)}}
+
+    payloads:
+      username:
+        - guest
+      password:
+        - guest
+    attack: pitchfork
+
     matchers-condition: and
     matchers:
       - type: word
