--- a/default-logins/samsung/samsung-wlan-default-login.yaml
+++ b/default-logins/samsung/samsung-wlan-default-login.yaml
@@ -8,10 +8,19 @@ info:
   tags: samsung,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/main.ehp"
-    body: "httpd;General;lang=en&login_id=root&login_pw=sweap12~"
+  - raw:
+      - |
+        POST /main.ehp HTTP/1.1
+        Host: {{BaseURL}}
+
+        "httpd;General;lang=en&login_id={{username}}&login_pw={{password}}"
+
+    payloads:
+      username:
+        - root
+      password:
+        - sweap12~
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
