--- a/default-logins/showdoc/showdoc-default-login.yaml
+++ b/default-logins/showdoc/showdoc-default-login.yaml
@@ -9,14 +9,21 @@ info:
   tags: showdoc,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/server/index.php?s=/api/user/login"
-    body: |
-      username=showdoc&password=123456&v_code=
+  - raw:
+      - |
+        POST /server/index.php?s=/api/user/login HTTP/1.1
+        Host: {{BaseURL}}
+        Content-Type: application/x-www-form-urlencoded;charset=UTF-8
 
-    headers:
-      Content-Type: application/x-www-form-urlencoded;charset=UTF-8
+        username={{username}}&password={{password}}&v_code=
+
+    payloads:
+      username:
+        - showdoc
+      password:
+        - 123456
+    attack: pitchfork
+
     matchers-condition: and
     matchers:
 
