--- a/default-logins/vidyo/vidyo-default-login.yaml
+++ b/default-logins/vidyo/vidyo-default-login.yaml
@@ -24,7 +24,14 @@ requests:
         Referer: {{RootURL}}/super/login.html?lang=en
         Cookie: JSESSIONID={{session}} ; VidyoPortalSuperLanguage=en
 
-        username=super&password=password
+        username={{username}}&password={{password}}
+
+    payloads:
+      username:
+        - super
+      password:
+        - password
+    attack: pitchfork
 
     extractors:
       - type: regex
