--- a/default-logins/visionhub/visionhub-default-login.yaml
+++ b/default-logins/visionhub/visionhub-default-login.yaml
@@ -9,11 +9,18 @@ info:
   reference: https://www.qognify.com/products/visionhub/
 
 requests:
-  - method: POST
-    path:
-      - '{{BaseURL}}/VisionHubWebApi/api/Login'
-    headers:
-      Authorization: Basic YWRtaW46YWRtaW4=
+  - raw:
+      - |
+        POST /VisionHubWebApi/api/Login HTTP/1.1
+        Host: {{BaseURL}}
+        Authorization: Basic {{base64(username + ':' + password)}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
