--- a/default-logins/activemq/activemq-default-login.yaml
+++ b/default-logins/activemq/activemq-default-login.yaml
@@ -7,14 +7,23 @@ info:
   tags: apache,activemq,default-login
 
 requests:
-  - method: GET
-    path:
-      - '{{BaseURL}}/admin/'
-    headers:
-      Authorization: "Basic YWRtaW46YWRtaW4="
+  - raw:
+      - |
+        GET /admin/ HTTP/1.1
+        Host: {{Hostname}}
+        Authorization: Basic {{base64(username + ':' + password)}}
+    payloads:
+      username:
+        - user
+        - admin
+      password:
+        - user
+        - admin
+    attack: pitchfork
     matchers:
       - type: word
         words:
           - 'Welcome to the Apache ActiveMQ Console of <b>'
           - '<h2>Broker</h2>'
         condition: and
+
