--- a/default-logins/alibaba/canal-default-login.yaml
+++ b/default-logins/alibaba/canal-default-login.yaml
@@ -7,13 +7,20 @@ info:
   tags: alibaba,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/api/v1/user/login"
-    headers:
-      Content-Type: application/json
-    body: |
-      {"username":"admin","password":"123456"}
+  - raw:
+      - |
+        POST /api/v1/user/login HTTP/1.1
+        Host: {{BaseURL}}
+        Content-Type: application/json
+
+        "username":{{username}},"password":{{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - 123456
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
