--- a/default-logins/exacqvision/exacqvision-default-login.yaml
+++ b/default-logins/exacqvision/exacqvision-default-login.yaml
@@ -15,7 +15,14 @@ requests:
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
         Connection: close
 
-        action=login&u=admin&p=admin256
+        action=login&u={{username}}&p={{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin256
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
