--- a/default-logins/flir/flir-default-login.yaml
+++ b/default-logins/flir/flir-default-login.yaml
@@ -14,7 +14,14 @@ requests:
         Accept: */*
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
 
-        user_name=admin&user_password=admin
+        user_name={{username}}&user_password={{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
