--- a/default-logins/glpi/glpi-default-login.yaml
+++ b/default-logins/glpi/glpi-default-login.yaml
@@ -20,7 +20,14 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Referer: {{BaseURL}}
 
-        {{name}}=glpi&{{password}}=glpi&auth=local&submit=Submit&_glpi_csrf_token={{token}}
+        {{name}}={{username}}&{{passwords}}={{password}}&auth=local&submit=Submit&_glpi_csrf_token={{token}}
+
+    payloads:
+      username:
+        - glpi
+      password:
+        - glpi
+    attack: pitchfork
 
     cookie-reuse: true
     redirects: true
@@ -43,7 +50,7 @@ requests:
           - "type=\"text\" name=\"([0-9a-z]+)\" id=\"login_name\" required=\"required\""
 
       - type: regex
-        name: password
+        name: passwords
         part: body
         internal: true
         group: 1
