--- a/default-logins/hongdian/hongdian-default-login.yaml
+++ b/default-logins/hongdian/hongdian-default-login.yaml
@@ -11,16 +11,25 @@ requests:
       - |
         GET / HTTP/1.1
         Host: {{Hostname}}
-        Authorization: Basic Z3Vlc3Q6Z3Vlc3Q=
+        Authorization: Basic {{base64(username + ':' + password)}}
         Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
         Accept-Encoding: gzip, deflate
 
       - |
         GET / HTTP/1.1
         Host: {{Hostname}}
-        Authorization: Basic YWRtaW46YWRtaW4=
+        Authorization: Basic {{base64(username + ':' + password)}}
         Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
         Accept-Encoding: gzip, deflate
+
+    payloads:
+      username:
+        - guest
+        - admin
+      password:
+        - guest
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
