--- a/default-logins/ofbiz/ofbiz-default-login.yaml
+++ b/default-logins/ofbiz/ofbiz-default-login.yaml
@@ -7,12 +7,21 @@ info:
   tags: ofbiz,default-login
 
 requests:
-  - method: POST
-    path:
-      - '{{BaseURL}}/control/login'
-    headers:
-      Content-Type: application/x-www-form-urlencoded
-    body: USERNAME=admin&PASSWORD=ofbiz&FTOKEN=&JavaScriptEnabled=Y
+  - raw:
+      - |
+        POST /control/login HTTP/1.1
+        Host: {{BaseURL}}
+        Content-Type: application/x-www-form-urlencoded
+
+        USERNAME={{username}}&PASSWORD={{password}}&FTOKEN=&JavaScriptEnabled=Y
+
+    payloads:
+      username:
+        - admin
+      password:
+        - ofbiz
+    attack: pitchfork
+
     matchers:
       - type: word
         words:
