--- a/default-logins/oracle/businessintelligence-default-login.yaml
+++ b/default-logins/oracle/businessintelligence-default-login.yaml
@@ -19,12 +19,19 @@ requests:
            <soapenv:Header/>
            <soapenv:Body>
               <rep:createSession soapenv:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">
-                 <username xsi:type="xsd:string">Administrator</username>
-                 <password xsi:type="xsd:string">Administrator</password>
+                 <username xsi:type="xsd:string">{{username}}</username>
+                 <password xsi:type="xsd:string">{{password}}</password>
                  <domain xsi:type="xsd:string">bi</domain>
               </rep:createSession>
            </soapenv:Body>
         </soapenv:Envelope>
+
+    payloads:
+      username:
+        - Administrator
+      password:
+        - Administrator
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
