--- a/default-logins/rockmongo/rockmongo-default-login.yaml
+++ b/default-logins/rockmongo/rockmongo-default-login.yaml
@@ -14,7 +14,14 @@ requests:
         Content-Type: application/x-www-form-urlencoded
         Referer: {{Hostname}}/index.php?action=login.index
 
-        more=0&host=0&username=admin&password=admin&db=&lang=en_us&expire=3
+        more=0&host=0&username={{username}}&password={{password}}&db=&lang=en_us&expire=3
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
