--- a/default-logins/solarwinds/solarwinds-default-login.yaml
+++ b/default-logins/solarwinds/solarwinds-default-login.yaml
@@ -12,12 +12,22 @@ info:
   # {"PollerType":"Hello, world! from nuclei :-P", "NetObject":"N:1337", "NetObjectType":"N", "NetObjectID":1337}
 
 requests:
-  - method: GET
-    path:
-      - "{{BaseURL}}/SolarWinds/InformationService/v3/Json/Query?query=SELECT+Uri+FROM+Orion.Pollers+ORDER+BY+PollerID+WITH+ROWS+1+TO+3+WITH+TOTALROWS" # First path is default base path
-      - "{{BaseURL}}/InformationService/v3/Json/Query?query=SELECT+Uri+FROM+Orion.Pollers+ORDER+BY+PollerID+WITH+ROWS+1+TO+3+WITH+TOTALROWS"
-    headers:
-      Authorization: "Basic YWRtaW46"
+  - raw:
+      - |
+        GET /SolarWinds/InformationService/v3/Json/Query?query=SELECT+Uri+FROM+Orion.Pollers+ORDER+BY+PollerID+WITH+ROWS+1+TO+3+WITH+TOTALROWS HTTP/1.1
+        Host: {{BaseURL}}
+        Authorization: Basic {{base64(username)}}
+
+      - |
+        GET /InformationService/v3/Json/Query?query=SELECT+Uri+FROM+Orion.Pollers+ORDER+BY+PollerID+WITH+ROWS+1+TO+3+WITH+TOTALROWS HTTP/1.1
+        Host: {{BaseURL}}
+        Authorization: Basic {{base64(username)}}
+
+    payloads:
+      username:
+        - admin
+    attack: pitchfork
+
     matchers-condition: and
     matchers:
       - type: word
