--- a/default-logins/spectracom/spectracom-default-login.yaml
+++ b/default-logins/spectracom/spectracom-default-login.yaml
@@ -13,7 +13,14 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
-        data%5Bbutton%5D=submit&data%5BUser%5D%5Busername%5D=spadmin&data%5BUser%5D%5Bpassword%5D=admin123
+        data%5Bbutton%5D=submit&data%5BUser%5D%5Busername%5D={{username}}&data%5BUser%5D%5Bpassword%5D={{password}}
+
+    payloads:
+      username:
+        - spadmin
+      password:
+        - admin123
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
