--- a/default-logins/viewpoint/trilithic-viewpoint-login.yaml
+++ b/default-logins/viewpoint/trilithic-viewpoint-login.yaml
@@ -16,7 +16,14 @@ requests:
         Content-Type: application/json
         Cookie: trilithic_win_auth=false
 
-        {u:"admin", t:"undefined", p:"trilithic", d:"", r:false, w:false}
+        {u:"{{username}}", t:"undefined", p:"{{password}}", d:"", r:false, w:false}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - trilithic
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
