--- a/default-logins/wifisky/wifisky-default-login.yaml
+++ b/default-logins/wifisky/wifisky-default-login.yaml
@@ -16,7 +16,14 @@ requests:
         Content-Type: application/x-www-form-urlencoded; charset=UTF-8
         Connection: close
 
-        username=admin&password=admin
+        username={{username}}&password={{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
