--- a/default-logins/wso2/wso2-default-login.yaml
+++ b/default-logins/wso2/wso2-default-login.yaml
@@ -14,7 +14,14 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
-        username=admin&password=admin
+        username={{username}}&password={{password}}
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     redirects: false
     matchers:
