--- a/default-logins/zmanda/zmanda-default-login.yaml
+++ b/default-logins/zmanda/zmanda-default-login.yaml
@@ -9,14 +9,21 @@ info:
   tags: zmanda,default-login
 
 requests:
-  - method: POST
-    path:
-      - '{{BaseURL}}/ZMC_Admin_Login'
-    headers:
-      Content-Type: application/x-www-form-urlencoded
-      Cookie: zmc_cookies_enabled=true
+  - raw:
+      - |
+        POST /ZMC_Admin_Login HTTP/1.1
+        Host:{{BaseURL}}
+        Content-Type: application/x-www-form-urlencoded
+        Cookie: zmc_cookies_enabled=true
 
-    body: login=AEE&last_page=&username=admin&password=admin&submit=Login&JS_SWITCH=JS_ON
+        login=AEE&last_page=&username={{username}}&password={{password}}&submit=Login&JS_SWITCH=JS_ON
+
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
+    attack: pitchfork
 
     matchers-condition: and
     matchers:
