--- a/default-logins/nagios/nagios-default-login.yaml
+++ b/default-logins/nagios/nagios-default-login.yaml
@@ -24,8 +24,9 @@ requests:
     matchers-condition: and
     matchers:
       - type: status
-        status:å
+        status:
           - 200
+
       - type: word
         words:
           - 'Current Status'
