--- a/vulnerabilities/other/keycloak-xss.yaml
+++ b/vulnerabilities/other/keycloak-xss.yaml
@@ -3,7 +3,7 @@ id: keycloak-xss
 info:
   name: Keycloak <= 8.0 - Cross Site Scripting
   author: incogbyte
-  severity: medium
+  severity: info
   reference: https://cure53.de/pentest-report_keycloak.pdf
   tags: keycloak,xss
 
