--- a/miscellaneous/apple-app-site-association.yaml
+++ b/miscellaneous/apple-app-site-association.yaml
@@ -15,7 +15,8 @@ requests:
 
     redirects: true
     max-redirects: 1
-
+     
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
