--- a/default-logins/grafana/grafana-default-login.yaml
+++ b/default-logins/grafana/grafana-default-login.yaml
@@ -1,4 +1,5 @@
 id: grafana-default-login
+
 info:
   name: Grafana Default Login
   author: pdteam
@@ -19,29 +20,24 @@ requests:
         Referer: {{BaseURL}}
         content-type: application/json
 
-        {"user":"admin","password":"§grafana_password§"}
-
+        {"user":"admin","password":"{{grafana_password}}"}
 
     payloads:
       grafana_password:
         - prom-operator
         - admin
 
-    attack: sniper
-
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - grafana_session
+          - "grafana_session" # Login cookie
         part: header
-        # Check for 'grafana_session' cookie on valid login in the response header.
 
       - type: word
-        words:
-          - Logged in
         part: body
-        # Check for valid string on valid login.
+        words:
+          - "Logged in" # Logged in keyword
 
       - type: status
         status:
